[tool.poetry]
name = "matrix-ukraine-donation-bot"
version = "0.1.0"
description = "A Matrix chat bot to send donation links to aid Ukraine in the 2022 Russian invasion of Ukraine."
authors = ["krazykirby99999"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
